Role Based Login , Employee , DG, Project Director, HRMS Module created with dashboard component

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,40 +1,34 @@
 <div class="main-container">
     <mat-toolbar class="colorclass">
         <div class="navbar-header">
-            <img src="assets/images/cg-logo.png" alt="homepage" class="light-logo" style="width: 50px;">            
-            <span fxShow="false" fxShow.gt-xs>
-            </span>
+            <img src="assets/images/cg-logo.png" alt="homepage"  style="width: 50px;">CRSC-HRMS    
         </div>        
         <button mat-icon-button (click)="snav.toggle()" value="sidebarclosed">
             <mat-icon>menu</mat-icon>
         </button>
         <span fxFlex></span>
         <span style="flex: 1 1 auto;"></span>
-        <div id="profileImage" [matMenuTriggerFor]="profile" style="font-size: 15px;">
+        <div id="profileImage" [matMenuTriggerFor]="profile" style="font-size: 15px;">{{currentUser.user_name | uppercase}}<br><span class="material-icons">exit_to_app</span>
         </div>
         <mat-menu #profile="matMenu" class="mymegamenu">
-            <button mat-menu-item>
-                <mat-icon>settings</mat-icon> Settings
-            </button>
             <button mat-menu-item [routerLink]="['/profile']" routerLinkActive="router-link-active">
-                <mat-icon>account_box</mat-icon> पासवर्ड बदलें
+                <mat-icon>account_box</mat-icon> Change Password
             </button>
-            <button mat-menu-item >
-                <mat-icon>exit_to_app</mat-icon>लॉगआउट
+            <button mat-menu-item (click)="logout()">
+                <mat-icon>exit_to_app</mat-icon>LogOut
             </button>
         </mat-menu>
     </mat-toolbar>
     <mat-sidenav-container class="example-sidenav-container" [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
         <mat-sidenav #snav id="snav" class="dark-sidebar pl-xs" [mode]="mobileQuery.matches ? 'side' : 'over'" fixedTopGap="0" [opened]="mobileQuery.matches" [disableClose]="mobileQuery.matches">
-
             <div class="user-profile" style="background-color: rgb(249, 252, 252);">
                 <div class="profile-img">
-                    <img src="assets/images/kavita.jpg" alt="user">
+                    <img src="assets/images/admin.png" alt="user">
                     <div class="profileImage">
                     </div>
                 </div>
                 <div class="profile-text"><a [matMenuTriggerFor]="sdprofile" class="">
-                       <mat-icon>arrow_drop_down</mat-icon></a></div>
+                    {{currentUser.user_name | uppercase}} LOGIN  <mat-icon>arrow_drop_down</mat-icon> </a> </div>
                 <mat-menu #sdprofile="matMenu" class="mymegamenu">
                     <!-- <button mat-menu-item>
                         <mat-icon>settings</mat-icon> Settings
@@ -43,13 +37,39 @@
                         <mat-icon>account_box</mat-icon> Change Password
                     </button>
 
-                    <button mat-menu-item >
-                        <mat-icon>exit_to_app</mat-icon> Logout
+                    <button mat-menu-item (click)="logout()">
+                        <mat-icon>exit_to_app</mat-icon> LogOut
                     </button>
                 </mat-menu>
             </div>
-
-            
+            <mat-nav-list appAccordion>
+                <!-- <mat-list-item appAccordionLink *ngFor="let menuitem of menuItems" routerLinkActive="selected" group="{menuitem.state}">
+                    <a class="" appAccordionToggle [routerLink]="[menuitem.state]" *ngIf="menuitem.type === 'link'">
+                        <mat-icon>{{ menuitem.icon }}</mat-icon>
+                        <span>{{ menuitem.name }}</span>
+                        <span fxFlex></span>
+                        <span class="label label-{{ badge.type }}" *ngFor="let badge of menuitem.badge">{{ badge.value
+                            }}</span>
+                    </a>
+                </mat-list-item> -->
+                <mat-list *ngFor="let menu of main_menu;let i=index;">
+                    <mat-list-item routerLink="{{menu.route}}" routerLinkActive="active"  *ngIf="menu.route" (click)="toggleSideBar()">
+                      <mat-icon>{{menu.icon}}</mat-icon> {{menu.display_name}}
+                    </mat-list-item>
+                    <mat-expansion-panel *ngIf="!menu.route" routerLinkActive="active">
+                      <mat-expansion-panel-header>
+                        <mat-panel-title>
+                          <mat-icon color="primary">{{menu.icon}}</mat-icon> {{menu.display_name}}
+                        </mat-panel-title>
+                      </mat-expansion-panel-header>
+                      <mat-list *ngFor="let item of child_menu">
+                        <mat-list-item routerLink="{{item.route}}" *ngIf="item.parent_menu_code == menu.menu_code" routerLinkActive="active" (click)="toggleSideBar()">
+                          <mat-icon>{{item.icon}}</mat-icon> {{item.display_name}}
+                        </mat-list-item>
+                      </mat-list>
+                    </mat-expansion-panel>
+                  </mat-list>
+            </mat-nav-list>
         </mat-sidenav>
 
         <mat-sidenav-content class="page-wrapper">
@@ -60,7 +80,5 @@
             </div>
         </mat-sidenav-content>
     </mat-sidenav-container>
-
-    
 </div>
 
