--- a/src/app/auth/auth.component.scss
+++ b/src/app/auth/auth.component.scss
@@ -14,3 +14,9 @@
     background: rgb(247, 246, 251);
     background: linear-gradient(90deg, rgb(221, 221, 227) 0%, rgba(9,90,121,1) 35%, rgba(0,212,255,1) 100%);
   }
+
+  .mat-list-item
+  {
+    font-size: 14px;
+  }
+
