--- a/src/app/styles/colors.scss
+++ b/src/app/styles/colors.scss
@@ -38,5 +38,5 @@ $shadow-dark-grey: #9A9A9A1A;
 $background-color: #F6F7FF;
 
 $primary-color: #00529a;//#084569;
-$sub-primary-color: #6db5f2;//#117466;
+$sub-primary-color: #052c4f;//#117466;
 $sub-primary-dark-color: #085248;
