--- a/src/assets/styles/header.scss
+++ b/src/assets/styles/header.scss
@@ -15,11 +15,13 @@ mat-toolbar{
         padding: 0px 15px;
     }
     .navbar-header {
-        text-align: center;
+        text-align: left;
+        color: aliceblue;
+        padding-left: 20px;
         .navbar-brand {
             display: flex;
             line-height: 18px;
-            align-items: center;
+            align-items: left;
             .dark-logo {
                 display: none;
             }
