--- a/src/app/auth/hrmsadmin/dashboard/dashboard.component.html
+++ b/src/app/auth/hrmsadmin/dashboard/dashboard.component.html
@@ -1,1 +1,107 @@
-<p>dashboard works!</p>
+<div class="row">
+    <div class="col-md-12" style="text-align: center; padding-top: 5px;">
+        <mat-label style="font-size: 22px;color: brown;">HRMS-Admin Dashboard 
+        </mat-label>
+    </div>
+</div>
+<br>
+<div id="layoutSidenav_content">
+    <main>
+        <div class="container-fluid px-4">           
+            <div class="row">
+                <div class="col-xl-3 col-md-6">
+                    <div class="card bg-primary text-white mb-4">
+                        <div class="card-body">
+                          <div class="d-flex justify-content-between p-md-1">
+                            <div class="d-flex flex-row">
+                              <div class="align-self-center">
+                                <i class="fa fa-users text-warning fa-3x me-4"></i>
+                              </div>
+                              <div>
+                                <h4> Employees</h4>
+                                <h2 class="h1 mb-0">55</h2>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-3 col-md-6">
+                    <div class="card bg-warning text-white mb-4">
+                        <div class="card-body">
+                          <div class="d-flex justify-content-between p-md-1">
+                            <div class="d-flex flex-row">
+                              <div class="align-self-center">
+                                <i class="fa fa-plane text-success fa-3x me-4"></i>
+                              </div>
+                              <div>
+                                <h4>Leave</h4>
+                              <h2 class="h1 mb-0">25</h2>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-3 col-md-6">
+                    <div class="card bg-success text-white mb-4">
+                        <div class="card-body">
+                          <div class="d-flex justify-content-between p-md-1">
+                            <div class="d-flex flex-row">
+                              <div class="align-self-center">
+                                <i class="fa fa-check text-info fa-3x me-4"></i>
+                              </div>
+                              <div>
+                                <h4>Approved</h4>
+                              <h2 class="h1 mb-0">34</h2>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </div>
+                </div>                
+                <div class="col-xl-3 col-md-6">
+                    <div class="card bg-danger text-white mb-4">
+              <div class="card-body">
+                <div class="d-flex justify-content-between p-md-1">
+                  <div class="d-flex flex-row">
+                    <div class="align-self-center">
+                      <i class="fa fa-info text-warning fa-3x me-4"></i>
+                    </div>
+                    <div>
+                      <h4>Pending</h4>
+                    <h2 class="h1 mb-0">12</h2>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+                </div>
+            </div>
+            <div class="row">                
+                <div class="col-xl-3 col-md-6">
+                    <div class="card bg-success text-white mb-4">
+                        <div class="card-body">
+                          <div class="d-flex justify-content-between p-md-1">
+                            <div class="d-flex flex-row">
+                              <div class="align-self-center">
+                                <i class="fa fa-trash text-danger fa-3x me-4"></i>
+                              </div>
+                              <div>
+                                <h4>Canceled</h4>
+                              <h2 class="h1 mb-0">15</h2>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+                
+
+            </div>
+            
+        </div>
+    </main>
+    
+    
+</div>
