--- a/src/app/auth/hrmsadmin/departmententry/departmententry.component.html
+++ b/src/app/auth/hrmsadmin/departmententry/departmententry.component.html
@@ -1,64 +1,28 @@
-<div class="main-content container-fluid">
-    <div class="page-title">
-        <div class="row">
-            <div class="col-12 col-md-6 order-md-1 order-last">
-                <h3>Add Department</h3>
-            </div>
-            <div class="col-12 col-md-6 order-md-2 order-first">
-                <nav aria-label="breadcrumb" class='breadcrumb-header'>
-                    <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html" class="text-success">Dashboard</a></li>
-                        <li class="breadcrumb-item active" aria-current="page">Add Department</li>
-                    </ol>
-                </nav>
-            </div>
-        </div>
-
-    </div>
-
-
-    <!-- Basic Vertical form layout section start -->
-    <section id="basic-vertical-layouts">
     <div class="row match-height">
-        <div class="col-md-8 col-12">
-        <div class="card">
-            <div class="card-content">
-            <div class="card-body">
-                <form class="form form-vertical">
-                <div class="form-body">
-                    <div class="row">
-                    <div class="col-12">
-                        <div class="form-group has-icon-left">
-                            <label for="first-name-icon">Department Short Name</label>
-                            <div class="position-relative">
-                                <input type="text" class="form-control" placeholder="Input Department" id="first-name-icon">
-                                <div class="form-control-icon">
-                                    <i class="fa fa-table"></i>
+        <div class="col-12">
+            <div class="card">
+                <div class="bg-secondary p-1 text-white text-center">Note: <i
+                    class="fa fa-asterisk text-danger" aria-hidden="true"></i>fields are Compulsory</div>
+                    <mat-card-title class="text-center">Enter  Department Details Here</mat-card-title>
+                    <hr>
+                    <div class="card-content">
+                        <div class="card-body">
+                            <form class="form" [formGroup]="departmententryform">
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <mat-form-field appearance="outline">
+                                            <mat-label>Department Name
+                                            </mat-label>
+                                            <input matInput formControlName="departmentname"  maxlength="100">                                                                               
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <button type="submit" class="btn btn-primary">Add Department</button> &nbsp;&nbsp; 
+                                    </div>  
                                 </div>
-                            </div>
+                            </form>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="form-group has-icon-left">
-                            <label for="email-id-icon">Department Name</label>
-                            <div class="position-relative">
-                                <input type="text" class="form-control" placeholder="Input Department Name" id="email-id-icon">
-                                <div class="form-control-icon">
-                                    <i class="fa fa-table"></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 d-flex justify-content-end">
-                        <button type="submit" class="btn btn-primary me-1 mb-1">Submit</button>
-                    </div>
-                    </div>
-                </div>
-                </form>
             </div>
-            </div>
-        </div>
         </div>
     </div>
-    </section>
