--- a/src/assets/styles/variable.scss
+++ b/src/assets/styles/variable.scss
@@ -38,7 +38,7 @@ $bodycolor: #eef5f9;
 $headingtext: #455a64;
 $bodytext: #67757c;
 $sidebar-text: #607d8b;
-$sidebar-icons: #99abb4;
+$sidebar-icons: #28078a;
 $font-16: 16px;
 $light-text: #a6b7bf;
 $themecolor: #1e88e5;
